--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -12,7 +12,65 @@
 
 .table {
     min-height: 80vh;
-    width: 90%;
+    width: 100%;
     text-align: center;
     /* background-color: white; */
 }
+
+h1 {
+    height: 60px;
+  }
+  
+  h1 span {
+    position: relative;
+    margin-right: 5px;
+    /* top: 20px; */
+    display: inline-block;
+    animation: bounce_text 0.5s ease infinite alternate;
+    /* font-family: 'Titan One', cursive; */
+    font-weight: bold;
+    font-size: 40px;
+    color: #FFF;
+    text-shadow: 0 1px 0 #CCC,
+                 0 2px 0 #CCC,
+                 0 3px 0 #CCC,
+                 0 4px 0 #CCC,
+                 0 5px 0 #CCC,
+                 0 6px 0 transparent,
+                 0 7px 0 transparent,
+                 0 8px 0 transparent,
+                 0 9px 0 transparent,
+                 0 10px 10px rgba(0, 0, 0, .4);
+  }
+  
+  h1 span:nth-child(2) { animation-delay: .1s; }
+  h1 span:nth-child(3) { animation-delay: .2s; }
+  h1 span:nth-child(4) { animation-delay: .3s; }
+  h1 span:nth-child(5) { animation-delay: .4s; }
+  h1 span:nth-child(6) { animation-delay: .5s; }
+  h1 span:nth-child(7) { animation-delay: .6s; }
+  h1 span:nth-child(8) { animation-delay: .7s; }
+  h1 span:nth-child(9) { animation-delay: .8s; }
+  h1 span:nth-child(10) { animation-delay: .9s; }
+  h1 span:nth-child(11) { animation-delay: 1s; }
+  h1 span:nth-child(12) { animation-delay: 1.1s; }
+  h1 span:nth-child(13) { animation-delay: 1.2s; }
+  
+  @keyframes bounce_text {
+    100% {
+      /* top: -10px; */
+      transform: translate3d(0, -10px, 0);
+      text-shadow: 0 1px 0 #CCC,
+                   0 2px 0 #CCC,
+                   0 3px 0 #CCC,
+                   0 4px 0 #CCC,
+                   0 5px 0 #CCC,
+                   0 6px 0 #CCC,
+                   0 7px 0 #CCC,
+                   0 8px 0 #CCC,
+                   0 9px 0 #CCC,
+                   0 50px 25px rgba(0, 0, 0, .2);
+    }
+  }
+  
+  
