--- a/src/components/DetailPage/DetailPage.module.css
+++ b/src/components/DetailPage/DetailPage.module.css
@@ -2,3 +2,22 @@
     width: 100%;
     height: 100%;
 }
+/* 
+.desc_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.new_matching_container {
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.new_matching_text {
+    height: 50px;
+    font-size: 25px;
+}
