--- a/src/components/MyMatchingPage/MyMatchingPage.module.css
+++ b/src/components/MyMatchingPage/MyMatchingPage.module.css
@@ -1,5 +1,25 @@
 .container {
-    width: 100%;
     height: 100%;
-    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form_container {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    width: 85vw;
+    height: 85vh;
+}
+
+.text {
+    font-size: 20px;
+    margin: 20px;
+    align-self: center;
 }
