--- a/src/components/MyMatchingPage/MyMatchingPage.module.css
+++ b/src/components/MyMatchingPage/MyMatchingPage.module.css
@@ -23,3 +23,27 @@
     margin: 20px;
     align-self: center;
 }
+
+.content_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.date_text {
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(110,165,254);
+}
+
+.diff_text {
+    font-size: 12px;
+    color: gray;
+}
+
+.content_button {
+    width: 60%;
+    align-self: center;
+    margin: 5px;
+}
