--- a/src/components/RegisterPage/RegisterPage.module.css
+++ b/src/components/RegisterPage/RegisterPage.module.css
@@ -1,5 +1,38 @@
 .container {
-    width: 100%;
     height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+}
+
+.form_container {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    width: 85vw;
+    height: 85vh;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50%;
+    width: 100%;
+}
+
+.text {
+    font-size: 20px;
+}
+
+.banner {
+    position: absolute;
+    top: 15vh;
 }
