--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,5 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap'); */
+
 .App {
   text-align: center;
 }
@@ -60,6 +62,24 @@
 
 
 /* custom */
+
+@font-face {
+  font-family: 'SDSamliphopangche_Outline';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SDSamliphopangche_Basic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Basic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.font {
+  font-family: 'SDSamliphopangche_Outline', sans-serif;
+}
+
 .logo {
   width: 100%;
   text-align: center;
@@ -108,6 +128,7 @@
 }
 
 .text {
+  font-family: 'SDSamliphopangche_Outline', sans-serif;
   font-size: 20px;
   color: rgb(110,165,254);
 }
