--- a/src/components/DetailPage/DetailPage.module.css
+++ b/src/components/DetailPage/DetailPage.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
+    font-family: 'SDSamliphopangche_Basic', sans-serif;
 }
 /* 
 .desc_container {
