--- a/src/components/MyMatchingPage/MyMatchingPage.module.css
+++ b/src/components/MyMatchingPage/MyMatchingPage.module.css
@@ -19,7 +19,7 @@
 }
 
 .text {
-    font-size: 20px;
+    font-size: 30px;
     margin: 20px;
     align-self: center;
 }
@@ -46,4 +46,8 @@
     width: 60%;
     align-self: center;
     margin: 5px;
+}
+
+.modal {
+    font-family: 'SDSamliphopangche_Basic', sans-serif;
 }
