--- a/src/components/MyMatchingPage/MyMatchingPage.module.css
+++ b/src/components/MyMatchingPage/MyMatchingPage.module.css
@@ -36,7 +36,7 @@
     font-weight: bold;
     color: rgb(110,165,254);
 }
-.date_text_failed {
+.date_text_waiting {
     font-size: 18px;
     font-weight: bold;
     color: gray;
@@ -46,7 +46,7 @@
     font-size: 12px;
     color: gray;
 }
-.diff_text_failed {
+.diff_text_waiting {
     font-size: 12px;
     color: gray;
 }
@@ -61,8 +61,8 @@
     font-family: 'SDSamliphopangche_Basic', sans-serif;
 }
 
-.failed {
-    background-color: rgb(217,217,217);
+.waiting {
+    background-color: rgb(217,217,217,0.3);
     /* opacity: 0.3; */
     /* color: white; */
 }
